WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241921
Regression(
r291141
) Flashing when hovering photos on nytimes.com
https://bugs.webkit.org/show_bug.cgi?id=241921
Summary
Regression(r291141) Flashing when hovering photos on nytimes.com
Chris Dumez
Reported
2022-06-23 10:20:45 PDT
Flashing when hovering photos on nytimes.com since
r291141
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-06-23 10:24:35 PDT
<
rdar://95098539
>
Chris Dumez
Comment 2
2022-06-23 10:33:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1730
EWS
Comment 3
2022-06-23 14:40:28 PDT
Committed
251802@main
(04e2b883c9ae): <
https://commits.webkit.org/251802@main
> Reviewed commits have been landed. Closing PR #1730 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug