Regression(r291141) Flashing when hovering photos on nytimes.com https://bugs.webkit.org/show_bug.cgi?id=241921 <rdar://95098539>

Reviewed by Geoffrey Garen.

Revert r291141 since it introduced the flashing of photos on nytimes.com and we suspect
it caused some crashes as well.

Instead, do a much more minimal fix in ImageLoader::updatedHasPendingEvent() to fix the
memory leak that r291141 was trying to fix. In updatedHasPendingEvent() we no longer
protect the element if the load is deferred indefinitely (which is the case for lazy
image loading). In the lazy image loading case, when the load actually starts,
ImageLoader::updateFromElement() gets called again, which calls updatedHasPendingEvent()
which will protect the element then.

No new tests, covered by fast/dom/lazy-image-loading-document-leak.html that is still
passing.

* Source/WebCore/loader/ImageLoader.cpp:
(WebCore::ImageLoader::ImageLoader):
(WebCore::ImageLoader::updateFromElement):
(WebCore::ImageLoader::didUpdateCachedImage):
(WebCore::ImageLoader::updatedHasPendingEvent):
(WebCore::ImageLoader::didStartLoading): Deleted.
* Source/WebCore/loader/ImageLoader.h:
* Source/WebCore/loader/cache/CachedImage.cpp:
(WebCore::CachedImage::load):
* Source/WebCore/loader/cache/CachedImageClient.h:
(WebCore::CachedImageClient::didStartLoading): Deleted.

Canonical link: https://commits.webkit.org/251802@main