Source/WebCore/loader/ImageLoader.cpp
@@ -107,7 +107,6 @@ ImageLoader::ImageLoader(Element& element)
     , m_imageComplete(true)
     , m_loadManually(false)
     , m_elementIsProtected(false)
-    , m_inUpdateFromElement(false)
 {
 }
 
@@ -179,11 +178,6 @@ void ImageLoader::updateFromElement(RelevantMutation relevantMutation)
     if (!m_failedLoadURL.isEmpty() && attr == m_failedLoadURL)
         return;
 
-    m_inUpdateFromElement = true;
-    auto inUpdateFromElementScope = makeScopeExit([this] {
-        m_inUpdateFromElement = false;
-    });
-
     // Do not load any image if the 'src' attribute is missing or if it is
     // an empty string.
     CachedResourceHandle<CachedImage> newImage = nullptr;
@@ -254,8 +248,7 @@ void ImageLoader::didUpdateCachedImage(RelevantMutation relevantMutation, Cached
     auto& document = element().document();
 
     CachedImage* oldImage = m_image.get();
-    bool loadHasNowLazilyStarted = oldImage == newImage && !m_hasPendingLoadEvent && newImage && newImage->isLoading();
-    if (newImage != oldImage || relevantMutation == RelevantMutation::Yes || loadHasNowLazilyStarted) {
+    if (newImage != oldImage || relevantMutation == RelevantMutation::Yes) {
         if (m_hasPendingBeforeLoadEvent) {
             beforeLoadEventSender().cancelEvent(*this);
             m_hasPendingBeforeLoadEvent = false;
@@ -274,12 +267,9 @@ void ImageLoader::didUpdateCachedImage(RelevantMutation relevantMutation, Cached
             m_hasPendingErrorEvent = false;
         }
 
-        // Due to lazy image loading and the loadsImagesAutomatically setting, it is possible that we did not actually start the image load.
-        bool imageWillBeLoadedLater = newImage && !newImage->isLoading() && newImage->stillNeedsLoad();
-
         m_image = newImage;
-        m_hasPendingBeforeLoadEvent = !document.isImageDocument() && newImage && !imageWillBeLoadedLater;
-        m_hasPendingLoadEvent = newImage && !imageWillBeLoadedLater;
+        m_hasPendingBeforeLoadEvent = !document.isImageDocument() && newImage;
+        m_hasPendingLoadEvent = newImage;
         m_imageComplete = !newImage;
 
         if (newImage) {
@@ -288,24 +278,18 @@ void ImageLoader::didUpdateCachedImage(RelevantMutation relevantMutation, Cached
             else
                 updateRenderer();
 
-            if (m_lazyImageLoadState == LazyImageLoadState::Deferred) {
-                if (imageWillBeLoadedLater)
-                    LazyLoadImageObserver::observe(element());
-                else // No need to set up a LazyLoadImageObserver if the image is already loaded (e.g. was already cached).
-                    m_lazyImageLoadState = LazyImageLoadState::None;
-            }
+            if (m_lazyImageLoadState == LazyImageLoadState::Deferred)
+                LazyLoadImageObserver::observe(element());
 
             // If newImage is cached, addClient() will result in the load event
             // being queued to fire. Ensure this happens after beforeload is
             // dispatched.
-            if (!loadHasNowLazilyStarted)
-                newImage->addClient(*this);
+            newImage->addClient(*this);
         } else
             resetLazyImageLoading(element().document());
 
         if (oldImage) {
-            if (!loadHasNowLazilyStarted)
-                oldImage->removeClient(*this);
+            oldImage->removeClient(*this);
             updateRenderer();
         }
     }
@@ -448,7 +432,12 @@ void ImageLoader::updatedHasPendingEvent()
     // destroyed by DOM manipulation or garbage collection.
     // If such an Element wishes for the load to stop when removed from the DOM it needs to stop the ImageLoader explicitly.
     bool wasProtected = m_elementIsProtected;
-    m_elementIsProtected = m_hasPendingLoadEvent || m_hasPendingErrorEvent;
+
+    // Because of lazy image loading, an image's load may be deferred indefinitely. To avoid leaking the element, we only
+    // protect it once the load has actually started.
+    bool imageWillBeLoadedLater = m_image && !m_image->isLoading() && m_image->stillNeedsLoad();
+
+    m_elementIsProtected = (m_hasPendingLoadEvent && !imageWillBeLoadedLater) || m_hasPendingErrorEvent;
     if (wasProtected == m_elementIsProtected)
         return;
 
@@ -603,13 +592,6 @@ void ImageLoader::loadDeferredImage()
     updateFromElement(RelevantMutation::No);
 }
 
-void ImageLoader::didStartLoading()
-{
-    if (m_inUpdateFromElement)
-        return;
-
-    didUpdateCachedImage(RelevantMutation::No, CachedResourceHandle { m_image });
-}
 void ImageLoader::resetLazyImageLoading(Document& document)
 {
     if (isDeferred())
